Add introduction to report and further ST applications info

--- a/doc/report.bib
+++ b/doc/report.bib
@@ -1,25 +1,31 @@
-@article{einstein,
-    author =       "Albert Einstein",
-    title =        "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-        [{On} the electrodynamics of moving bodies]",
-    journal =      "Annalen der Physik",
-    volume =       "322",
-    number =       "10",
-    pages =        "891--921",
-    year =         "1905",
+@article{article-example,
+    author =       "Something",
+    title =        "Something",
+    journal =      "Something",
+    volume =       "Something",
+    number =       "Something",
+    pages =        "Something",
+    year =         "Something",
     DOI =          "http://dx.doi.org/10.1002/andp.19053221004"
 }
 
-@book{latexcompanion,
-    author    = "Michel Goossens and Frank Mittelbach and Alexander Samarin",
-    title     = "The \LaTeX\ Companion",
-    year      = "1993",
-    publisher = "Addison-Wesley",
-    address   = "Reading, Massachusetts"
+@book{book-example,
+    author    = "Something",
+    title     = "Something",
+    year      = "Something",
+    publisher = "Something",
+    address   = "Something"
 }
 
-@misc{knuthwebsite,
-    author    = "Donald Knuth",
-    title     = "Knuth: Computers and Typesetting",
-    url       = "http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html"
+@misc{website:knp-wiki,
+    author    = "en.wikipedia.org",
+    title     = "Knuth-Morris-Pratt algorithm",
+    howpublished = {\url{https://en.wikipedia.org/wiki/Knuth_Morris_Pratt_algorithm}}
+}
+
+@misc{website:bm-wiki,
+    author    = "en.wikipedia.org",
+    title     = "Boyer-Moore string search algorithm",
+    howpublished = {\url{https://en.wikipedia.org/wiki/Boyer_Moore_string_search_algorithm}},
+    urldate = {2017-10-30}
 }
