--- a/doc/report.tex
+++ b/doc/report.tex
@@ -21,12 +21,20 @@
 Suffix trees expresses the internal structure of a string in a much
 deeper level than ordinary preprocessing. They are able to solve the
 exact string matching problem with the same runtime bounds as
-algorithms such as Knuth.
+algorithms such as the Knuth-Morris-Pratt (KMP) algorithm
+~\cite{website:knp-wiki} or the Boyer-Moore algorithm (BM)
+~\cite{website:bm-wiki}. However, their real value comes from linear
+use to being able to solve many string problems more complex than
+exact string search. It's hard to find another data structure that
+solves that many problems both efficiently and easy as suffix
+trees. A typical use case where they excel other string searching
+algorithms is when you have one pice of text, fixed over some time,
+but are presented multiple pattern strings. The task is now to find
+all occurences of each pattern in the text. With suffix trees, you
+need $O(n + k)$ for each pattern. In contrast, KMP and BM needs
+$O(m + n)$ for each input string presented.
 
-Ths document is an example of BibTeX using in bibliography management. Three items
-are cited: \textit{The \LaTeX\ Companion} book \cite{latexcompanion}, the Einstein
-journal paper \cite{einstein}, and the Donald Knuth's website \cite{knuthwebsite}.
-The \LaTeX\ related items are \cite{latexcompanion,knuthwebsite}.
+\section{History}
 
 \medskip
 
