--- a/notes/suffix-trees.org
+++ b/notes/suffix-trees.org
@@ -245,3 +245,4 @@
 *** Could first create suffix tree up to N characters and then lazily build STree
 *** Really inefficient?
 ** Suffix trees related to functional programming
+** Should be very easy to parallelize in the functional paradigm
